--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
+    "bpmn-auto-layout": "^0.1.0",
     "bpmn-js": "^9.0.3",
+    "bpmn-moddle": "^5.1.6",
     "core-js": "^3.8.3",
     "diagram-js-minimap": "^2.1.1",
     "vue": "^2.6.14",
