--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "diagram-js-minimap": "^2.1.1",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
+    "vue-panzoom": "^1.1.3",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
