fix dockerfile and nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
 
-    listen 81;
+    listen 80;
 
     root /usr/share/nginx/html;
     
@@ -9,4 +9,10 @@ server {
     location / {
         try_files $uri $uri/ /index.html;               
     }
+
+    location /api {
+        include uwsgi_params;
+        uwsgi_pass $server_addr:5001;
+    }
+
 }
