env en nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     location /api {
         include uwsgi_params;
-        uwsgi_pass $server_addr:5001;
+        uwsgi_pass ${HOST_IP}:${BASE_URL};
     }
 
 }
