--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     location /api {
         include uwsgi_params;
-        uwsgi_pass ${HOST_IP}:${BASE_URL};
+        uwsgi_pass ${HOST_IP}:${BASE_PORT};
     }
 
 }
