--- a/nginx.conf
+++ b/nginx.conf
@@ -16,3 +16,18 @@ server {
     }
 
 }
+
+server {
+
+    listen ${BASE_PORT};
+
+    location /api {
+        proxy_pass http://localhost:${BASE_PORT};
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+}
